Resolve some Sonar findings